flickering body load fix

--- a/css/alex-2021.webflow.css
+++ b/css/alex-2021.webflow.css
@@ -788,7 +788,7 @@ h1 {
   }
 
   .heading.small {
-    font-size: 14px;
+    font-size: 16px;
     line-height: 24px;
   }
 
